--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
-  asyncstate: ^2.1.0
+  asyncstate: 2.0.2
   loading_animation_widget: ^1.2.0+4
   dio: ^5.4.0
   shared_preferences: ^2.2.2
